# docs/swagger.json
@@ -1,15 +1,15 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "title": "WhoManages API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8000",
     "paths": {
         "/create_session": {
             "post": {
                 "description": "Создание новой игровой сессии",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json",
                     "application/json"
@@ -54,11 +54,8 @@
         "/join_session": {
             "post": {
                 "description": "Присоединение к игровой сессии",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
-                    "application/json"
+                    "aplication/json"
                 ],
                 "tags": [
                     "Session"
@@ -85,12 +82,6 @@
                         "description": "Игрок успешно присоединился к сессии",
                         "schema": {
                             "$ref": "#/definitions/main.SuccessResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Некорректный запрос или неверный ID сессии",
-                        "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
                         }
                     }
                 }
@@ -122,9 +113,6 @@
         "/play": {
             "post": {
                 "description": "Производит игровой ход в рамках сессии, включая выбор игрока и определение победителя в раунде.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -161,26 +149,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.PlayResponse"
                         }
-                    },
-                    "400": {
-                        "description": "Некорректный запрос или неверный идентификатор сессии",
-                        "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
-                        }
                     }
                 }
             }
         }
     },
     "definitions": {
-        "main.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
         "main.PlayResponse": {
             "type": "object",
             "properties": {
